--- a/admission.html
+++ b/admission.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
     <link href="./style.css" rel="stylesheet">
 </head>
 
@@ -20,6 +19,9 @@
             <a href="admission.html">Admission</a>
             <a href="contact.html ">Contact</a>
             <a href="gallery.html ">Gallery</a>
+            <a href="registration.html ">Registration</a>
+            <a href="infrastructure.html">Infrastructure</a>
+
         </div>
         <div class="item3">
             <header>ADMISSIONS OF THE SCHOOL</header>
