--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link href="./style.css" rel="stylesheet">
 </head>
+</style>
 
 <body>
 
@@ -20,6 +20,9 @@
             <a href="admission.html">Admission</a>
             <a href="contact.html ">Contact</a>
             <a href="gallery.html ">Gallery</a>
+            <a href="registration.html">Registration</a>
+            <a href="infrastructure.html">Infrastructure</a>
+
         </div>
         <div class="item3">
             <div class="grid-container-gallery">
