--- a/home.html
+++ b/home.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title>School App</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
 </head>
 
@@ -18,6 +20,9 @@
             <a href="admission.html">Admission</a>
             <a href="contact.html ">Contact</a>
             <a href="gallery.html ">Gallery</a>
+            <a href="registration.html">Registration</a>
+            <a href="infrastructure.html">Infrastructure</a>
+
         </div>
         <div class="item3">
             <img src="./images/school.jpg" alt="">
